# DataLayerGenerator

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt  conanfile_embedded.txt
.github/workflows/: build_cmake.yml  docs.yml
cmake/: Cache.cmake  CodeFormat.cmake  CompilerWarnings.cmake  Conan.cmake  DataLayerGeneratorHelpers.cmake  Doxygen.cmake  Options.cmake  Python.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
cmake/Modules/: FindSphinx.cmake
cmake/arm-cortex-gnu/: ArmCortexGnuToolchain.cmake
cmake/presets/: arm.json  base.json  clang-linux.json  gcc-linux.json  static-analysis.json  windows.json
conan/: conanfile_default.txt.in  conanfile_embedded.txt.in
datalayer_example/: pyproject.toml  setup.py
docker/: Dockerfile  build-ci-image.sh  build-dev-image.sh  cppdev-docker
docs/: CMakeLists.txt  Doxyfile.in  basic.rst  conan.rst  concepts.rst  conf.py  enums.rst  example.rst  file.rst  generator.rst  helper.rst  index.rst  model.rst
scripts/: run-clang-format.py
src/: CMakeLists.txt  embedded.cpp  main.cpp
src/generator/: README.md  __init__.py  constants.py  generator.py  overviewGenerator.py  requirements.txt  schema.json  umlGenerator.py  validatorException.py  validators.py
src/include/: dataPointGroupMapping.h  datalayerBase.h  datapoint.h  detail.h  dispatcher.h  groupInfo.h  helper.h  serialization.h
src/model/: datapoints.json  enums.json  groups.json  model.json  structs.json  types.json
src/template/: customFormatter.h.jinja2  datalayer.h.jinja2  pythonBinding.jinja2
templates/: version.hpp.in
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt  catch_main.cpp
test/catch2/datapoints/: test.cpp
test/catch2/datapoints/model/: datapoints.json  groups.json  structs.json  types.json
test/catch2/enums/: test.cpp
test/catch2/enums/model/: datapoints.json  enums.json  structs.json
test/catch2/groups/: test.cpp
test/catch2/groups/model/: enums.json  groups.json
test/python/: CMakeLists.txt  testDatapointValidator.py  testEnumValidator.py  testGeneratorFunctions.py  testGroupValidator.py  testStructValidator.py  testTypesValidator.py  testValidatorHelpers.py
